--- a/SecureWalk/src/app/app.component.css
+++ b/SecureWalk/src/app/app.component.css
@@ -2,4 +2,6 @@
     background-color: rgb(119, 186, 131); /* O #3f51b5 para un tono específico */
     color: white;
   }
-  
+  table {
+  width: 100%;
+}
