--- a/SecureWalk/src/app/app.component.html
+++ b/SecureWalk/src/app/app.component.html
@@ -1,10 +1,25 @@
 <mat-toolbar>
   <mat-icon>menu</mat-icon>
-  <button mat-button [matMenuTriggerFor]="menuServer">Usuarios</button>
+  <button mat-button [matMenuTriggerFor]="menuUsuario">Usuarios</button>
+  <button mat-button [matMenuTriggerFor]="menuZona">Zona</button>
+  <button mat-button [matMenuTriggerFor]="menuPregunta">Pregunta</button>
+  <button mat-button [matMenuTriggerFor]="menuEncuesta">Encuesta</button>
+
 </mat-toolbar>
-  <mat-menu #menuServer="matMenu">
-    <button mat-menu-item routerLink="/usuarios/listar">Listar</button>
-  </mat-menu>
+<mat-menu #menuUsuario="matMenu">
+  <button mat-menu-item routerLink="/usuarios/listar">Listar</button>
+</mat-menu>
+
+<mat-menu #menuZona="matMenu">
+  <button mat-menu-item routerLink="/zonas/listar">Listar</button>
+</mat-menu>
+
+<mat-menu #menuPregunta="matMenu">
+  <button mat-menu-item routerLink="/preguntas/listar">Listar</button>
+</mat-menu>
+
+<mat-menu #menuEncuesta="matMenu">
+  <button mat-menu-item routerLink="/encuestas/listar">Listar</button>
+</mat-menu>
+
 <router-outlet></router-outlet>
-
-
