--- a/SecureWalk/src/app/components/zona/listarzona/listarzona.component.css
+++ b/SecureWalk/src/app/components/zona/listarzona/listarzona.component.css
@@ -3,4 +3,7 @@ mat-paginator {
   margin-top: 20px;  /* Añade un poco de espacio entre la tabla y el paginador */
   display: block;  /* Asegura que el paginador se comporta como un bloque, ocupando todo el ancho */
 }
+.titulo {
+  text-align: center;
+}
   
