--- a/SecureWalk/src/app/components/usuario/listarusuario/listarusuario.component.html
+++ b/SecureWalk/src/app/components/usuario/listarusuario/listarusuario.component.html
@@ -1,4 +1,7 @@
-<div>
+<div class="container" >
+    <div>
+        <h1 class="titulo">Lista de usuarios</h1>
+    </div>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
         <!--- Note that these columns can be defined in any order.
@@ -45,7 +48,7 @@
         <!-- Symbol Column -->
         <ng-container matColumnDef="password">
             <th mat-header-cell *matHeaderCellDef> Contraseña </th>
-            <td mat-cell *matCellDef="let element"> {{'*' .repeat(element.password.length)}} </td>
+            <td mat-cell *matCellDef="let element"> {{truncarContra(element.password)}} </td>
         </ng-container>
         <!-- Symbol Column -->
         <ng-container matColumnDef="enable">
