--- a/SecureWalk/src/app/components/zona/listarzona/listarzona.component.html
+++ b/SecureWalk/src/app/components/zona/listarzona/listarzona.component.html
@@ -1,4 +1,7 @@
-<div>
+<div class="container">
+    <div>
+        <h1 class="titulo">Lista de zonas</h1>
+    </div>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
         <!--- Note that these columns can be defined in any order.
