--- a/SecureWalk/src/app/components/encuesta/listarencuesta/listarencuesta.component.html
+++ b/SecureWalk/src/app/components/encuesta/listarencuesta/listarencuesta.component.html
@@ -1,6 +1,6 @@
 <div class="container" >
     <div>
-        <h1 class="titulo">Lista de usuarios</h1>
+        <h1 class="titulo">Lista de encuentas</h1>
     </div>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
