Insert Usuario + Insert Encuesta

--- a/SecureWalk/src/app/app.component.html
+++ b/SecureWalk/src/app/app.component.html
@@ -16,6 +16,7 @@
 </mat-toolbar>
 <mat-menu #menuUsuario="matMenu">
   <button mat-menu-item routerLink="/usuarios/listar">Listar</button>
+    <button mat-menu-item routerLink="/usuarios/insertar">Insertar</button>
 </mat-menu>
 
 <mat-menu #menuZona="matMenu">
@@ -28,6 +29,7 @@
 
 <mat-menu #menuEncuesta="matMenu">
   <button mat-menu-item routerLink="/encuestas/listar">Listar</button>
+    <button mat-menu-item routerLink="/encuestas/insertar">Insertar</button>
 </mat-menu>
 
 <router-outlet></router-outlet>
