Añadir insertar de Pregunta + insertar de Zona

--- a/SecureWalk/src/app/app.component.html
+++ b/SecureWalk/src/app/app.component.html
@@ -21,10 +21,13 @@
 
 <mat-menu #menuZona="matMenu">
   <button mat-menu-item routerLink="/zonas/listar">Listar</button>
+  <button mat-menu-item routerLink="/zonas/insertar">Insertar</button>
 </mat-menu>
 
 <mat-menu #menuPregunta="matMenu">
   <button mat-menu-item routerLink="/preguntas/listar">Listar</button>
+  <button mat-menu-item routerLink="/preguntas/insertar">Insertar</button>
+
 </mat-menu>
 
 <mat-menu #menuEncuesta="matMenu">
