Añadir put y delete + añadir método cancelar para boton cancelar para mayor robustez

--- a/SecureWalk/src/app/app.component.html
+++ b/SecureWalk/src/app/app.component.html
@@ -15,24 +15,24 @@
 
 </mat-toolbar>
 <mat-menu #menuUsuario="matMenu">
-  <button mat-menu-item routerLink="/usuarios/listar">Listar</button>
-    <button mat-menu-item routerLink="/usuarios/insertar">Insertar</button>
+  <button mat-menu-item routerLink="/usuarios">Listar</button>
+    <button mat-menu-item routerLink="/usuarios/formulario">Insertar</button>
 </mat-menu>
 
 <mat-menu #menuZona="matMenu">
-  <button mat-menu-item routerLink="/zonas/listar">Listar</button>
-  <button mat-menu-item routerLink="/zonas/insertar">Insertar</button>
+  <button mat-menu-item routerLink="/zonas">Listar</button>
+  <button mat-menu-item routerLink="/zonas/formulario">Insertar</button>
 </mat-menu>
 
 <mat-menu #menuPregunta="matMenu">
-  <button mat-menu-item routerLink="/preguntas/listar">Listar</button>
-  <button mat-menu-item routerLink="/preguntas/insertar">Insertar</button>
+  <button mat-menu-item routerLink="/preguntas">Listar</button>
+  <button mat-menu-item routerLink="/preguntas/formulario">Insertar</button>
 
 </mat-menu>
 
 <mat-menu #menuEncuesta="matMenu">
-  <button mat-menu-item routerLink="/encuestas/listar">Listar</button>
-    <button mat-menu-item routerLink="/encuestas/insertar">Insertar</button>
+  <button mat-menu-item routerLink="/encuestas">Listar</button>
+    <button mat-menu-item routerLink="/encuestas/formulario">Insertar</button>
 </mat-menu>
 
 <router-outlet></router-outlet>
