--- a/SecureWalk/src/app/components/zona/insertareditar/insertareditar.component.html
+++ b/SecureWalk/src/app/components/zona/insertareditar/insertareditar.component.html
@@ -1,10 +1,12 @@
-<div>
-  <div>Registro de zonas</div>
+<div class = "container">
   <div style="text-align: center; margin: 5%">
+      <h1>Registro de zonas</h1>
+  </div>
+  <div style="text-align: center;">
     <form [formGroup]="form" (submit)="aceptar()">
       <mat-form-field *ngIf="edicion">
         <mat-label>ID</mat-label>
-        <input matInput formControlName="codigo" />
+        <input matInput formControlName="codigo">
 
         <mat-error *ngIf="form.get('codigo')?.hasError('required')">
           El codigo de la zona es obligatoria!!
@@ -13,34 +15,34 @@
       <br />
       <mat-form-field>
         <mat-label>Longitud</mat-label>
-        <input matInput formControlName="longitudZona" />
+        <input matInput formControlName="longitud">
 
-        <mat-error *ngIf="form.get('longitudZona')?.hasError('required')">
+        <mat-error *ngIf="form.get('longitud')?.hasError('required')">
           El texto de la pregunta es obligatorio!!
         </mat-error>
       </mat-form-field>
       <br />
       <mat-form-field>
         <mat-label>Latitud</mat-label>
-        <input matInput formControlName="latitudZona" />
+        <input matInput formControlName="latitud">
 
-        <mat-error *ngIf="form.get('latitudZona')?.hasError('required')">
+        <mat-error *ngIf="form.get('latitud')?.hasError('required')">
           El texto de la pregunta es obligatorio!!
         </mat-error>
       </mat-form-field>
       <br />
       <mat-form-field>
         <mat-label>Nombre de zona</mat-label>
-        <input matInput formControlName="nombreZona" />
+        <input matInput formControlName="nombre">
 
-        <mat-error *ngIf="form.get('nombreZona')?.hasError('required')">
+        <mat-error *ngIf="form.get('nombre')?.hasError('required')">
           El texto de la pregunta es obligatorio!!
         </mat-error>
       </mat-form-field>
       <br />
 
-      <button mat-raised-button color="primary">Aceptar</button>
-      <button mat-raised-button color="warn" routerLink="/zonas">
+       <button mat-raised-button color="primary" type="submit">Aceptar</button>
+      <button mat-raised-button color="warn" (click)="cancelar()">
         Cancelar
       </button>
     </form>
