--- a/SecureWalk/src/app/components/zona/listarzona/listarzona.component.html
+++ b/SecureWalk/src/app/components/zona/listarzona/listarzona.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div>
+  <div style="text-align: center;margin: 5%;">
     <h1 class="titulo">Lista de zonas</h1>
   </div>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
@@ -7,31 +7,31 @@
                   The actual rendered columns are set as a property on the row definition" -->
 
     <!-- Position Column -->
-    <ng-container matColumnDef="idZona">
+    <ng-container matColumnDef="c1">
       <th mat-header-cell *matHeaderCellDef>ID.</th>
       <td mat-cell *matCellDef="let element">{{ element.idZona }}</td>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="latitudZona">
+    <ng-container matColumnDef="c2">
       <th mat-header-cell *matHeaderCellDef>Latitud</th>
       <td mat-cell *matCellDef="let element">{{ element.latitudZona }}</td>
     </ng-container>
 
     <!-- Weight Column -->
-    <ng-container matColumnDef="longitudZona">
+    <ng-container matColumnDef="c3">
       <th mat-header-cell *matHeaderCellDef>Longitud</th>
       <td mat-cell *matCellDef="let element">{{ element.longitudZona }}</td>
     </ng-container>
 
     <!-- Symbol Column -->
-    <ng-container matColumnDef="nombreZona">
+    <ng-container matColumnDef="c4">
       <th mat-header-cell *matHeaderCellDef>Zona</th>
       <td mat-cell *matCellDef="let element">{{ element.nombreZona }}</td>
     </ng-container>
 
     <!-- Symbol Column -->
-    <ng-container matColumnDef="ediciones">
+    <ng-container matColumnDef="c5">
       <th mat-header-cell *matHeaderCellDef>Actualizar</th>
       <td mat-cell *matCellDef="let element">
         <button matButton [routerLink]="['ediciones', element.idZona]">
@@ -41,7 +41,7 @@
     </ng-container>
 
     <!-- Symbol Column -->
-    <ng-container matColumnDef="eliminar">
+    <ng-container matColumnDef="c6">
       <th mat-header-cell *matHeaderCellDef>Eliminar</th>
       <td mat-cell *matCellDef="let element">
         <button matButton (click)="eliminar(element.idZona)">
