--- a/SecureWalk/src/app/components/encuesta/listarencuesta/listarencuesta.component.html
+++ b/SecureWalk/src/app/components/encuesta/listarencuesta/listarencuesta.component.html
@@ -4,32 +4,49 @@
     </div>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-        <!--- Note that these columns can be defined in any order.
-                          The actual rendered columns are set as a property on the row definition" -->
-
         <!-- Position Column -->
-        <ng-container matColumnDef="idEncuesta">
+        <ng-container matColumnDef="c1">
             <th mat-header-cell *matHeaderCellDef> ID. </th>
             <td mat-cell *matCellDef="let element"> {{element.idEncuesta}} </td>
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="nombreEncuesta">
+        <ng-container matColumnDef="c2">
             <th mat-header-cell *matHeaderCellDef> Nombre Encuesta </th>
             <td mat-cell *matCellDef="let element"> {{element.nombreEncuesta}} </td>
         </ng-container>
 
         <!-- Weight Column -->
-        <ng-container matColumnDef="descripcionEncuesta">
+        <ng-container matColumnDef="c3">
             <th mat-header-cell *matHeaderCellDef> Descripción </th>
             <td mat-cell *matCellDef="let element"> {{element.descripcionEncuesta}} </td>
         </ng-container>
 
         <!-- Weight Column -->
-        <ng-container matColumnDef="fechaCreacionEncuesta">
+        <ng-container matColumnDef="c4">
             <th mat-header-cell *matHeaderCellDef> Fecha </th>
             <td mat-cell *matCellDef="let element"> {{element.fechaCreacionEncuesta}} </td>
         </ng-container>
+
+                <!-- Symbol Column -->
+    <ng-container matColumnDef="c5">
+      <th mat-header-cell *matHeaderCellDef>Actualizar</th>
+      <td mat-cell *matCellDef="let element">
+        <button matButton [routerLink]="['ediciones', element.idEncuesta]">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="c6">
+      <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+      <td mat-cell *matCellDef="let element">
+        <button matButton (click)="eliminar(element.idEncuesta)">
+          <mat-icon>delete_forever</mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
