--- a/SecureWalk/src/app/components/pregunta/insertareditar/insertareditar.component.html
+++ b/SecureWalk/src/app/components/pregunta/insertareditar/insertareditar.component.html
@@ -2,32 +2,35 @@
   <div>Registro de encuestas</div>
   <div>
     <form [formGroup]="form" (submit)="aceptar()">
-<br>
+      <br />
       <mat-form-field>
         <mat-label>Texto Pregunta</mat-label>
-        <input matInput formControlName="textoPregunta">
+        <input matInput formControlName="texto" />
 
-        <mat-error *ngIf="form.get('textoPregunta')?.hasError('required')">
+        <mat-error *ngIf="form.get('texto')?.hasError('required')">
           El texto de la pregunta es obligatorio!!
         </mat-error>
       </mat-form-field>
-<br>
+      <br />
       <mat-form-field>
         <mat-label>Tipo de pregunta</mat-label>
-        <mat-select formControlName="tipoPregunta">
+        <mat-select formControlName="tipo">
           <mat-option *ngFor="let tp of tipoPregunta" [value]="tp.value">
             {{ tp.viewValue }}
           </mat-option>
         </mat-select>
       </mat-form-field>
-<br>
-      
+      <br />
 
-  <button mat-raised-button color="primary">Aceptar</button>
-  <button mat-raised-button color="warn" routerLink="/preguntas">
-   Cancelar
-  </button>
-
+      <button mat-raised-button color="primary" type="submit">Aceptar</button>
+      <button
+        mat-raised-button
+        color="warn"
+        (click)="cancelar()"
+        routerLink="/preguntas"
+      >
+        Cancelar
+      </button>
     </form>
   </div>
 </div>
