--- a/SecureWalk/src/app/components/pregunta/listarpregunta/listarpregunta.component.html
+++ b/SecureWalk/src/app/components/pregunta/listarpregunta/listarpregunta.component.html
@@ -8,22 +8,43 @@
                       The actual rendered columns are set as a property on the row definition" -->
 
         <!-- Position Column -->
-        <ng-container matColumnDef="idPregunta">
+        <ng-container matColumnDef="c1">
             <th mat-header-cell *matHeaderCellDef> ID. </th>
             <td mat-cell *matCellDef="let element"> {{element.idPregunta}} </td>
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="textoPregunta">
+        <ng-container matColumnDef="c2">
             <th mat-header-cell *matHeaderCellDef> Pregunta </th>
             <td mat-cell *matCellDef="let element"> {{element.textoPregunta}} </td>
         </ng-container>
 
         <!-- Weight Column -->
-        <ng-container matColumnDef="tipoPregunta">
+        <ng-container matColumnDef="c3">
             <th mat-header-cell *matHeaderCellDef> Tipos Pregunta </th>
             <td mat-cell *matCellDef="let element"> {{element.tipoPregunta}} </td>
         </ng-container>
+
+        <!-- Symbol Column -->
+    <ng-container matColumnDef="c4">
+      <th mat-header-cell *matHeaderCellDef>Actualizar</th>
+      <td mat-cell *matCellDef="let element">
+        <button matButton [routerLink]="['ediciones', element.idPregunta]">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="c5">
+      <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+      <td mat-cell *matCellDef="let element">
+        <button matButton (click)="eliminar(element.idPregunta)">
+          <mat-icon>delete_forever</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
