--- a/SecureWalk/src/app/components/zona/listarzona/listarzona.component.html
+++ b/SecureWalk/src/app/components/zona/listarzona/listarzona.component.html
@@ -3,6 +3,23 @@
     <div style="text-align: center; margin: 5%;">
       <h1 class="titulo">Lista de zonas</h1>
     </div>
+
+    <div class="search-container">
+      <mat-form-field appearance="outline" class="search-field">
+        <mat-label>Latitud</mat-label>
+        <input matInput type="number" [(ngModel)]="searchLat" placeholder="-12.0873795">
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="search-field">
+        <mat-label>Longitud</mat-label>
+        <input matInput type="number" [(ngModel)]="searchLng" placeholder="-77.0500079">
+      </mat-form-field>
+      <button mat-raised-button color="primary" (click)="searchLocation()">
+        <mat-icon>search</mat-icon> Buscar en Mapa
+      </button>
+      <button *ngIf="temporaryMarkerPosition" mat-raised-button color="warn" (click)="clearSearch()">
+        <mat-icon>clear</mat-icon> Limpiar Búsqueda
+      </button>
+    </div>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="c2">
         <th mat-header-cell *matHeaderCellDef>Latitud</th>
@@ -47,10 +64,14 @@
   </div>
 
   <div class="map-container">
-  <google-map mapId="f404a59fc2fcb5b5" [center]="center" [zoom]="zoom" height="100%" width="100%">
-    <ng-container *ngFor="let position of markerPositions">
-      <map-advanced-marker [position]="position"></map-advanced-marker>
-    </ng-container>
-  </google-map>
-</div>
+    <google-map mapId="f404a59fc2fcb5b5" [center]="center" [zoom]="zoom" height="100%" width="100%">
+      <ng-container *ngFor="let position of markerPositions">
+        <map-advanced-marker [position]="position"></map-advanced-marker>
+      </ng-container>
+
+      <map-advanced-marker *ngIf="temporaryMarkerPosition" [position]="temporaryMarkerPosition"
+        title="Ubicación Buscada">
+      </map-advanced-marker>
+    </google-map>
+  </div>
 </div>
