Agregar slider con componentes cards y componente buscar por usuario

--- a/SecureWalk/src/app/app.component.html
+++ b/SecureWalk/src/app/app.component.html
@@ -16,7 +16,8 @@
 </mat-toolbar>
 <mat-menu #menuUsuario="matMenu">
   <button mat-menu-item routerLink="/usuarios">Listar</button>
-    <button mat-menu-item routerLink="/usuarios/formulario">Insertar</button>
+  <button mat-menu-item routerLink="/usuarios/formulario">Insertar</button>
+  <button mat-menu-item routerLink="/usuarios/busquedasporusuario">Buscar</button>
 </mat-menu>
 
 <mat-menu #menuZona="matMenu">
