--- a/SecureWalk/src/app/components/usuario/listarusuario/listarusuario.component.html
+++ b/SecureWalk/src/app/components/usuario/listarusuario/listarusuario.component.html
@@ -2,87 +2,23 @@
   <div>
     <h1 class="titulo">Lista de usuarios</h1>
   </div>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
-
-    <!-- Position Column -->
-    <ng-container matColumnDef="c1">
-      <th mat-header-cell *matHeaderCellDef>ID.</th>
-      <td mat-cell *matCellDef="let element">{{ element.idUsuario }}</td>
-    </ng-container>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="c2">
-      <th mat-header-cell *matHeaderCellDef>Nombre</th>
-      <td mat-cell *matCellDef="let element">{{ element.nombreUsuario }}</td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="c3">
-      <th mat-header-cell *matHeaderCellDef>Correo</th>
-      <td mat-cell *matCellDef="let element">{{ element.emailUsuario }}</td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="c4">
-      <th mat-header-cell *matHeaderCellDef>Celular</th>
-      <td mat-cell *matCellDef="let element">{{ element.telefonoUsuario }}</td>
-    </ng-container>
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="c5">
-      <th mat-header-cell *matHeaderCellDef>Dirección</th>
-      <td mat-cell *matCellDef="let element">{{ element.direccionUsuario }}</td>
-    </ng-container>
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="c6">
-      <th mat-header-cell *matHeaderCellDef>Fecha</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.fechaRegistroUsuario }}
-      </td>
-    </ng-container>
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="c7">
-      <th mat-header-cell *matHeaderCellDef>Username</th>
-      <td mat-cell *matCellDef="let element">{{ element.username }}</td>
-    </ng-container>
-    <!-- Symbol Column -->
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="c8">
-      <th mat-header-cell *matHeaderCellDef>Estado</th>
-      <td mat-cell *matCellDef="let element">{{ element.enable }}</td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="c9">
-      <th mat-header-cell *matHeaderCellDef>Actualizar</th>
-      <td mat-cell *matCellDef="let element">
-        <button matButton [routerLink]="['ediciones', element.idUsuario]">
-          <mat-icon>edit</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="c10">
-      <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-      <td mat-cell *matCellDef="let element">
-        <button matButton (click)="eliminar(element.idUsuario)">
-          <mat-icon>delete_forever</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-
-  <!-- Paginador fuera de la tabla -->
-  <mat-paginator
-    [length]="dataSource.data.length"
-    [pageSize]="5"
-    [pageSizeOptions]="[5, 10, 15, 20]"
-    aria-label="Seleccionar paginación"
-  >
-  </mat-paginator>
+ <div class="slider-container">
+  <owl-carousel-o [options]="customOptions">
+    <ng-template carouselSlide *ngFor="let usuario of usuarios">
+      <mat-card class="usuario-card">
+        <mat-card-header>
+          <mat-card-title>{{ usuario.nombreUsuario }}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>Fecha de registro: {{ usuario.fechaRegistroUsuario }}</p>
+          <p>Estado: {{ usuario.enable }}</p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button color="primary" [routerLink]="['ediciones', usuario.idUsuario]"><mat-icon>edit</mat-icon></button>
+          <button mat-button color="warn" (click)="eliminar(usuario.idUsuario)"><mat-icon>delete_forever</mat-icon></button>
+        </mat-card-actions>
+      </mat-card>
+    </ng-template>
+  </owl-carousel-o>
+</div>
 </div>
