ajustes en API de mapa

--- a/SecureWalk/src/app/components/zona/insertareditar/insertareditar.component.html
+++ b/SecureWalk/src/app/components/zona/insertareditar/insertareditar.component.html
@@ -1,33 +1,25 @@
-<div class = "container">
+<div class="container">
   <div style="text-align: center; margin: 5%">
-      <h1>Registro de zonas</h1>
+    <h1>Registro de zonas</h1>
   </div>
   <div style="text-align: center;">
     <form [formGroup]="form" (submit)="aceptar()">
-      <mat-form-field *ngIf="edicion">
-        <mat-label>ID</mat-label>
-        <input matInput formControlName="codigo">
-
-        <mat-error *ngIf="form.get('codigo')?.hasError('required')">
-          El codigo de la zona es obligatoria!!
-        </mat-error>
-      </mat-form-field>
       <br />
       <mat-form-field>
         <mat-label>Longitud</mat-label>
-        <input matInput formControlName="longitud">
+        <input matInput formControlName="longitud" type="number">
 
         <mat-error *ngIf="form.get('longitud')?.hasError('required')">
-          El texto de la pregunta es obligatorio!!
+          La longitud es obligatoria
         </mat-error>
       </mat-form-field>
       <br />
       <mat-form-field>
         <mat-label>Latitud</mat-label>
-        <input matInput formControlName="latitud">
+        <input matInput formControlName="latitud" type="number">
 
         <mat-error *ngIf="form.get('latitud')?.hasError('required')">
-          El texto de la pregunta es obligatorio!!
+          La latitud es obligatoria
         </mat-error>
       </mat-form-field>
       <br />
@@ -36,15 +28,21 @@
         <input matInput formControlName="nombre">
 
         <mat-error *ngIf="form.get('nombre')?.hasError('required')">
-          El texto de la pregunta es obligatorio!!
+          El nombre de la zona es obligatorio
         </mat-error>
       </mat-form-field>
       <br />
 
-       <button mat-raised-button color="primary" type="submit">Aceptar</button>
+      <button mat-raised-button color="primary" type="submit">Aceptar</button>
       <button mat-raised-button color="warn" (click)="cancelar()">
         Cancelar
       </button>
     </form>
+  </div>
+  <div style="width: 100%; height: 400px; margin-top: 20px;">
+    <google-map mapId="f404a59fc2fcb5b5" [options]="mapOptions">
+      <map-advanced-marker *ngIf="markerPosition" [position]="markerPosition" title="Ubicación de la Zona">
+      </map-advanced-marker>
+    </google-map>
   </div>
 </div>
