--- a/SecureWalk/src/app/components/usuario/insertareditar/insertareditar.component.html
+++ b/SecureWalk/src/app/components/usuario/insertareditar/insertareditar.component.html
@@ -8,6 +8,9 @@
         <mat-error *ngIf="form.get('nombre')?.hasError('required')">
           El nombre de usuario es obligatorio!!
         </mat-error>
+        <mat-error *ngIf="form.get('nombre')?.hasError('pattern')">
+          No se permiten carácteres especiales
+        </mat-error>
       </mat-form-field>
       <br />
       <mat-form-field>
@@ -16,6 +19,9 @@
         <mat-error *ngIf="form.get('email')?.hasError('required')">
           El campo email es obligatorio!!
         </mat-error>
+        <mat-error *ngIf="form.get('email')?.hasError('email')">
+          Debe ser un correo válido
+        </mat-error>
       </mat-form-field>
       <br />
       <mat-form-field>
@@ -23,6 +29,9 @@
         <input matInput formControlName="telefono" />
         <mat-error *ngIf="form.get('telefono')?.hasError('required')">
           El campo teléfono es obligatorio!!
+        </mat-error>
+        <mat-error *ngIf="form.get('telefono')?.hasError('pattern')">
+          El teléfono debe tener exactamente 9 dígitos numéricos.
         </mat-error>
       </mat-form-field>
       <br />
@@ -47,10 +56,11 @@
           [for]="picker"
         ></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
-        <mat-error
-          *ngIf="form.get('fechaRegistro')?.hasError('required')"
-        >
+        <mat-error *ngIf="form.get('fechaRegistro')?.hasError('required')">
           La fecha es obligatoria!!
+        </mat-error>
+        <mat-error *ngIf="form.get('fechaRegistro')?.hasError('fechaPasada')">
+          No se permiten fechas pasadas.
         </mat-error>
       </mat-form-field>
       <br />
@@ -60,11 +70,30 @@
         <mat-error *ngIf="form.get('username')?.hasError('required')">
           Este campo es obligatorio!!
         </mat-error>
+        <mat-error *ngIf="form.get('username')?.hasError('usernameDuplicado')">
+          El nombre de usuario ya está en uso.
+        </mat-error>
       </mat-form-field>
       <br />
-      <mat-form-field>
-        <mat-label>password</mat-label>
-        <input matInput formControlName="password" />
+      <mat-form-field appearance="fill">
+        <mat-label>Contraseña</mat-label>
+        <input
+          matInput
+          [type]="hidePassword ? 'password' : 'text'"
+          formControlName="password"
+        />
+        <button
+          mat-icon-button
+          matSuffix
+          (click)="hidePassword = !hidePassword"
+          [attr.aria-label]="'Mostrar u ocultar contraseña'"
+          [attr.aria-pressed]="!hidePassword"
+          type="button"
+        >
+          <mat-icon>{{
+            hidePassword ? "visibility_off" : "visibility"
+          }}</mat-icon>
+        </button>
         <mat-error *ngIf="form.get('password')?.hasError('required')">
           Este campo es obligatorio!!
         </mat-error>
@@ -78,10 +107,15 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
-      <br>
+      <br />
 
       <button mat-raised-button color="primary" type="submit">Aceptar</button>
-      <button mat-raised-button color="warn" (click)="cancelar()" routerLink="/usuarios">
+      <button
+        mat-raised-button
+        color="warn"
+        (click)="cancelar()"
+        routerLink="/usuarios"
+      >
         Cancelar
       </button>
     </form>
