--- a/SecureWalk/src/app/components/zona/listarzona/listarzona.component.html
+++ b/SecureWalk/src/app/components/zona/listarzona/listarzona.component.html
@@ -7,11 +7,11 @@
     <div class="search-container">
       <mat-form-field appearance="outline" class="search-field">
         <mat-label>Latitud</mat-label>
-        <input matInput type="number" [(ngModel)]="searchLat" placeholder="-12.0873795">
+        <input matInput type="number"step="any" [(ngModel)]="searchLat" placeholder="-12.0873795">
       </mat-form-field>
       <mat-form-field appearance="outline" class="search-field">
         <mat-label>Longitud</mat-label>
-        <input matInput type="number" [(ngModel)]="searchLng" placeholder="-77.0500079">
+        <input matInput type="number" step="any" [(ngModel)]="searchLng" placeholder="-77.0500079">
       </mat-form-field>
       <button mat-raised-button color="primary" (click)="searchLocation()">
         <mat-icon>search</mat-icon> Buscar en Mapa
