--- a/SecureWalk/src/app/components/pregunta/insertareditar/insertareditar.component.html
+++ b/SecureWalk/src/app/components/pregunta/insertareditar/insertareditar.component.html
@@ -1,36 +1,53 @@
-<div>
-  <div>Registro de encuestas</div>
-  <div>
-    <form [formGroup]="form" (submit)="aceptar()">
-      <br />
-      <mat-form-field>
-        <mat-label>Texto Pregunta</mat-label>
-        <input matInput formControlName="texto" />
+<div class="container-form">
+  <h2>{{ edicion ? 'Editar Pregunta' : 'Registrar Pregunta' }}</h2>
 
-        <mat-error *ngIf="form.get('texto')?.hasError('required')">
-          El texto de la pregunta es obligatorio!!
-        </mat-error>
-      </mat-form-field>
-      <br />
-      <mat-form-field>
-        <mat-label>Tipo de pregunta</mat-label>
-        <mat-select formControlName="tipo">
-          <mat-option *ngFor="let tp of tipoPregunta" [value]="tp.value">
-            {{ tp.viewValue }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <br />
+  <form [formGroup]="form" (ngSubmit)="aceptar()">
+    <!-- Código (oculto o de sólo lectura en edición) -->
+    <mat-form-field appearance="fill" *ngIf="edicion">
+      <mat-label>Código Pregunta</mat-label>
+      <input matInput formControlName="codigo" [disabled]="true" />
+    </mat-form-field>
 
-      <button mat-raised-button color="primary" type="submit">Aceptar</button>
+    <!-- Texto de la pregunta -->
+    <mat-form-field appearance="fill">
+      <mat-label>Texto Pregunta</mat-label>
+      <input matInput formControlName="texto" placeholder="Escribe aquí la pregunta" />
+      <mat-error *ngIf="form.get('texto')?.hasError('required')">
+        El texto de la pregunta es obligatorio.
+      </mat-error>
+    </mat-form-field>
+
+    <!-- Tipo de pregunta -->
+    <mat-form-field appearance="fill">
+      <mat-label>Tipo de pregunta</mat-label>
+      <mat-select formControlName="tipo">
+        <mat-option *ngFor="let tp of tipoPregunta" [value]="tp.value">
+          {{ tp.viewValue }}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="form.get('tipo')?.hasError('required')">
+        Debes seleccionar un tipo de pregunta.
+      </mat-error>
+    </mat-form-field>
+
+    <!-- Botones -->
+    <div class="botones">
+      <button
+        mat-raised-button
+        color="primary"
+        type="submit"
+        [disabled]="form.invalid"
+      >
+        {{ edicion ? 'Actualizar' : 'Registrar' }}
+      </button>
       <button
         mat-raised-button
         color="warn"
+        type="button"
         (click)="cancelar()"
-        routerLink="/preguntas"
       >
         Cancelar
       </button>
-    </form>
-  </div>
+    </div>
+  </form>
 </div>
