--- a/SecureWalk/src/app/components/incidente/listarincidente/listarincidente.component.html
+++ b/SecureWalk/src/app/components/incidente/listarincidente/listarincidente.component.html
@@ -1,36 +1,25 @@
 <div class="container">
-    <div style="text-align: center;margin: 5%;">
-        <h1>Lista de incidentes</h1>
-    </div>
     <div>
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <!-- Position Column -->
-            <ng-container matColumnDef="c1">
-                <th mat-header-cell *matHeaderCellDef> Tipo. </th>
-                <td mat-cell *matCellDef="let element"> {{element.tipoIncidente}} </td>
-            </ng-container>
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="c2">
-                <th mat-header-cell *matHeaderCellDef> Fecha </th>
-                <td mat-cell *matCellDef="let element"> {{element.fechaIncidente|date:'dd/MM/yyyy'}} </td>
-            </ng-container>
-            <!-- Name Column -->
-            <ng-container matColumnDef="c3">
-                <th mat-header-cell *matHeaderCellDef> Descripcion </th>
-                <td mat-cell *matCellDef="let element"> {{element.descripcionIncidente}} </td>
-            </ng-container>
-            <ng-container matColumnDef="c4">
-                <th mat-header-cell *matHeaderCellDef> Zona </th>
-                <td mat-cell *matCellDef="let element"> {{element.zona.nombreZona}} </td>
-            </ng-container>
-            <ng-container matColumnDef="c5">
-                <th mat-header-cell *matHeaderCellDef> Usuario </th>
-                <td mat-cell *matCellDef="let element"> {{element.usuario.nombreUsuario}} </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <h1 class="titulo">Lista de incidentes</h1>
     </div>
+ <div class="slider-container">
+  <owl-carousel-o [options]="customOptions">
+    <ng-template carouselSlide *ngFor="let incidente of incidentes">
+      <mat-card class="usuario-card">
+        <mat-card-header>
+          <mat-card-title>{{ incidente.idIncidente }}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>Fecha de registro: {{ incidente.fechaIncidente }}</p>
+          <p>Usuario: {{ incidente.usuario.nombreUsuario }}</p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button color="primary" [routerLink]="['ediciones', incidente.idIncidente]"><mat-icon>edit</mat-icon></button>
+          <button mat-button color="warn" (click)="eliminar(incidente.idIncidente)"><mat-icon>delete_forever</mat-icon></button>
+        </mat-card-actions>
+      </mat-card>
+    </ng-template>
+  </owl-carousel-o>
+</div>
 </div>
   
