--- a/SecureWalk/src/app/components/rol/insertareditarrol/insertareditarrol.component.html
+++ b/SecureWalk/src/app/components/rol/insertareditarrol/insertareditarrol.component.html
@@ -2,7 +2,7 @@
     <div style="text-align: center;margin: 5%;">
         <h1>Registro de roles</h1>
     </div>
-    <div style="text-align: center;margin: 5%;">
+    <div style="text-align: center">
 
         <form [formGroup]="form" (submit)=" aceptar()">
             <mat-form-field>
