--- a/SecureWalk/src/app/components/menu/menu.component.html
+++ b/SecureWalk/src/app/components/menu/menu.component.html
@@ -47,6 +47,12 @@
       <mat-icon>poll</mat-icon>
     </button>
   </div>
+  <div>
+    <button mat-button [matMenuTriggerFor]="menuEvaluacionIncidente">
+      Evaluacion Incidente
+      <mat-icon>poll</mat-icon>
+    </button>
+  </div>
   <span class="toolbar-spacer"></span>
   <div class="right-menu">
     <button mat-button [matMenuTriggerFor]="menuSalir">
@@ -87,6 +93,11 @@
 <mat-menu #menuIncidente="matMenu">
   <button mat-menu-item routerLink="/incidentes">Listar</button>
   <button mat-menu-item routerLink="/incidentes/formulario">Insertar</button>
+</mat-menu>
+
+<mat-menu #menuEvaluacionIncidente="matMenu">
+  <button mat-menu-item routerLink="/evaluacionincidentes">Listar</button>
+  <button mat-menu-item routerLink="/evaluacionincidentes/formulario">Insertar</button>
 </mat-menu>
 
 <mat-menu #menuSalir="matMenu">
