--- a/SecureWalk/src/app/components/rol/listarrol/listarrol.component.html
+++ b/SecureWalk/src/app/components/rol/listarrol/listarrol.component.html
@@ -19,7 +19,7 @@
         <!-- Name Column -->
         <ng-container matColumnDef="c3">
             <th mat-header-cell *matHeaderCellDef> Usuario </th>
-            <td mat-cell *matCellDef="let element"> {{element.usuario.idUsuario}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.usuario.nombreUsuario}} </td>
         </ng-container>
 
                 <!-- Symbol Column -->
