--- a/SecureWalk/src/app/components/zona/listarzona/listarzona.component.css
+++ b/SecureWalk/src/app/components/zona/listarzona/listarzona.component.css
@@ -1,4 +1,13 @@
 /* listarzona.component.css */
+    
+/* Estilos para el título principal */
+.titulo {
+  color: #3f51b5; /* Un azul primario de Material Design */
+  margin-bottom: 10px;
+  font-size: 2.5em; /* Tamaño de fuente grande para el título */
+  font-weight: 600; /* Peso de fuente semi-negrita */
+  text-align: center;
+}
 
 .main-container {
   display: flex;
